[package]
name = "ads-proxy"
version = "0.9.2"
edition = "2021"
authors = ["fengyingcai <fengyc.work@gmail.com>"]
description = "ADS proxy utility"
homepage = "https://github.com/fengyc/ads-proxy"
repository = "https://github.com/fengyc/ads-proxy"
readme = "README.md"
keywords = ["beckhoff", "ads", "proxy"]
categories = ["network-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ads-proxy"
path = "src/main.rs"
doc = false

[dependencies]
ads = "0.4.3"
anyhow = "1.0.71"
byteorder = "1.4.3"
clap = { version = "4.3.3", features = ["derive"] }
ctor = "0.2.2"
env_logger = "0.10.0"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["net", "rt", "full"] }
